# potential-field-method

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  Makefile  README.md  main.py  requirements-dev.txt  requirements.txt  setup.cfg
data/: densely.json  discharged.json  normally.json
examples/: planner.py  solution.json  space.json
pfm/: algorithm.py  settings.py
project/: __init__.py  models.py
tests/: test_models.py
